tests/integrations/json-basic/tests/actual_tests/error_above.rs
use json_basic::add;

fn main() {
    //~v ERROR: mismatched types
    add("42", 3);
}
